# ic-stable-memory

./: .gitignore  Cargo.toml  LICENCE  README.md  coverage.sh
docs/: architecture.md  benchmarks.md  encoding.md  migration.md  out-of-memory-error-handling.md  perfomance.md  quick-start.md  upgradeability.md  user-defined-data-structures.md
examples/how_to_test/: Cargo.toml
examples/how_to_test/src/: lib.rs
examples/infinite_index/index/: Cargo.toml  dfx.json  v1.did
examples/infinite_index/index/src/: actor.rs  v1.rs  v2.rs
examples/infinite_index/root/: Cargo.toml
examples/infinite_index/root/src/: actor.rs  child.rs  management.rs
examples/performance_counter/: Cargo.toml  build.sh  can.did  dfx.json
examples/performance_counter/src/: actor.rs
examples/schema_evolution/: Cargo.toml  README.md  v2.did
examples/schema_evolution/src/: actor.rs  v1.rs
examples/token/: Cargo.toml  build.sh  can.did  canister_ids.json  dfx.json
examples/token/src/: actor.rs
ic-stable-memory-allocator/: Cargo.toml
ic-stable-memory-allocator/src/: lib.rs  mem_block.rs  mem_context.rs  membox.rs  stable_memory_allocator.rs  types.rs
ic-stable-memory-collections/: Cargo.toml
ic-stable-memory-collections/src/: lib.rs  stable_vec.rs  types.rs
ic-stable-memory-collections/src/stable_array_list/: inner.rs
ic-stable-memory-collections/src/stable_linked_list/: inner.rs  mod.rs
ic-stable-memory-derive/: Cargo.toml
ic-stable-memory-derive-tests/: Cargo.toml
ic-stable-memory-derive-tests/src/: lib.rs
ic-stable-memory-derive/src/: as_fixed_size_bytes.rs  candid_as_dyn_size_bytes.rs  fixed_size_as_dyn_size_bytes.rs  lib.rs  stable_drop.rs  stable_type.rs
src/: lib.rs  macros.rs  mem_block.rs  mem_context.rs  stable_memory_allocator.rs  types.rs  utils.rs
src/benches/: binary_heap.rs  btree_map.rs  btree_set.rs  certified_map.rs  hash_map.rs  hash_set.rs  log.rs  mod.rs  vec.rs
src/benchmarks/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  mod.rs  vec.rs
src/collections/: binary_heap.rs  btree.rs  btree_map.rs  btree_map1.rs  btree_set.rs  hash_map.rs  hash_set.rs  mod.rs  stack.rs  vec.rs
src/collections/b_plus_tree_map/: internal_node.rs  iter.rs  leaf_node.rs  mod.rs
src/collections/binary_heap/: binary_heap_direct.rs  binary_heap_indirect.rs  iter.rs  mod.rs
src/collections/btree_map/: internal_node.rs  iter.rs  leaf_node.rs  map.rs  mod.rs  node.rs
src/collections/btree_set/: iter.rs  mod.rs
src/collections/certified_btree_map/: internal_node.rs  iter.rs  leaf_node.rs  mod.rs
src/collections/certified_btree_set/: iter.rs  mod.rs
src/collections/certified_hash_map/: iter.rs  map.rs  mod.rs  node.rs
src/collections/hash_map/: hash_map_direct.rs  hash_map_indirect.rs  iter.rs  map.rs  mod.rs  new_hash_map.rs  node.rs
src/collections/hash_set/: iter.rs  mod.rs
src/collections/log/: iter.rs  mod.rs
src/collections/nrb_tree_map/: mod.rs  node.rs
src/collections/vec/: iter.rs  mod.rs  vec_direct.rs  vec_indirect.rs
src/encoding/: dyn_size.rs  fixed_size.rs  mod.rs
src/mem/: allocator.rs  free_block.rs  mod.rs  s_slice.rs
src/mem/membox/: candid.rs  common.rs  mod.rs  raw.rs  s.rs
src/primitive/: mod.rs  raw_s_cell.rs  s_box.rs  s_box_mut.rs  s_cell.rs  s_cellbox.rs  s_ref.rs  s_ref_cell.rs  s_ref_mut.rs  s_slice.rs  s_unsafe_cell.rs
src/types/: string.rs
src/utils/: certification.rs  encode.rs  encoding.rs  ic_types.rs  math.rs  mem_context.rs  mod.rs  phantom_data.rs  test.rs  vars.rs
