[package]
name = "ic-stable-memory"
version = "0.4.0-rc1"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2021"
description = "Internet Computer's stable memory collections and tools"
license = "MIT"
readme = "./README.md"
keywords = ["dfinity", "internet-computer", "ic", "stable-memory", "collections"]

[lib]
path = "./src/lib.rs"

[dependencies]
ic-cdk = "0.6.5"
candid = "0.8.3"
serde = "1.0.147"
num-bigint = "0.4.3"
sha2 = "0.10.6"
zwohash = "0.1.2"

[dev-dependencies]
rand = "0.8.5"
ic-certified-map = "0.3.1"