[package]
name = "ic-stable-memory"
version = "0.4.0-rc2"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2021"
description = "Internet Computer's stable memory collections and tools"
license = "MIT"
readme = "./README.md"
keywords = ["dfinity", "internet-computer", "ic", "stable-memory", "collections"]

[lib]
path = "./src/lib.rs"

[dependencies]
ic-cdk = "0.6.8"
candid = "0.8.4"
serde = "1.0.152"
serde_bytes = "0.11.8"
num-bigint = "0.4.3"
sha2 = "0.10.6"
zwohash = "0.1.2"

[dev-dependencies]
rand = "0.8.5"