[package]
name = "ic-stable-memory"
version = "0.4.0-rc3"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2021"
description = "Internet Computer's stable memory collections and tools"
license = "MIT"
readme = "./README.md"
keywords = ["dfinity", "internet-computer", "ic", "stable-memory", "collections"]

[lib]
path = "./src/lib.rs"

[dependencies]
ic-cdk = "0.6.10"
candid = "0.8.4"
serde = "1.0.152"
serde_bytes = "0.11.8"
num-bigint = "0.4.3"
sha2 = "0.10.6"
zwohash = "0.1.2"

ic-stable-memory-derive = { path = "ic-stable-memory-derive" }

[dev-dependencies]
rand = "0.8.5"
ic-cdk-macros = "0.6.8"
candid_derive = "0.5.0"
ic-certified-map = "0.3.2"
serde_test = "1.0.152"

[features]
custom_dyn_encoding = []
