[package]
name = "ic-stable-memory-allocator"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Memory allocator for Internet Computer's stable memory"
license = "MIT"
readme = "../README.md"
keywords = ["dfinity", "internet-computer", "ic", "stable-memory", "memory"]

[lib]
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.5.0"
candid = "0.7.14"
serde = "1.0.136"