[package]
name = "ic-stable-memory-collections"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2018"
description = "Stable memory collections for Internet Computer"
license = "MIT"
readme = "../README.md"
keywords = ["dfinity", "internet-computer", "ic", "stable-memory", "memory", "vec", "hashmap", "collections"]

[lib]
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.3"
ic-stable-memory-allocator = { path = "../ic-stable-memory-allocator" }