[package]
name = "ic-stable-memory-derive-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-stable-memory = { path = "../../ic-stable-memory" }
candid = "0.8.4"
serde = "1.0.152"
rand = "0.8.5"
ic-cdk = "0.7.0"
ic-cdk-macros = "0.6.8"