[package]
name = "performance-counter"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.6.1"
ic-cdk-macros = "0.6.1"
serde = "1.0.147"
candid = "0.8.3"
speedy = "0.8.3"
ic-stable-memory = { path = "../../../ic-stable-memory" }
