[package]
name = "stable-token"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
serde = "1.0.137"
candid = "0.7.14"
speedy = "0.8.2"
ic-stable-memory = { path = "../../../ic-stable-memory" }
